# csst-dfs-api-local

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
csst_dfs_api_local/: __init__.py  _version.py
csst_dfs_api_local/common/: catalog.py  db.py  db.sql  ephem.py  ingest.py  utils.py
csst_dfs_api_local/entity/: RSS_demo.py  ReadMe.txt  __init__.py
csst_dfs_api_local/facility/: __init__.py  calmerge.py  detector.py  level0.py  level0prc.py  level1prc.py  observation.py
csst_dfs_api_local/ifs/: __init__.py  calmerge.py  fits.py  ingest.py  level0.py  level0prc.py  level1.py  level1prc.py  reffits.py  result0.py  result1.py
examples/: ifs_rss_pipeline.py
tests/: test.py  test_RSS.py  test_common_catalog.py  test_common_db.py  test_common_ephem.py  test_facility_cal_merge.py  test_facility_detector.py  test_facility_level0.py  test_facility_level0_prc.py  test_facility_level1_prc.py  test_facility_observation.py  test_ifs_cal_merge.py  test_ifs_fits.py  test_ifs_ingest.py  test_ifs_level0.py  test_ifs_level0_prc.py  test_ifs_level1.py  test_ifs_level1_prc.py  test_ifs_refs.py  test_ifs_result0.py  test_ifs_result1.py  test_mci_cal_merge.py  test_mci_ingest.py  test_mci_level0.py  test_mci_level0_prc.py  test_mci_level1.py  test_mci_level1_prc.py  test_msc_cal_merge.py  test_msc_level0.py  test_msc_level0_prc.py  test_msc_level1.py  test_msc_level1_prc.py  test_msc_level2_catalog.py  test_sls_cal_merge.py  test_sls_level0.py  test_sls_level0_prc.py  test_sls_level1.py  test_sls_level1_prc.py  test_sls_level2_spectra.py
(+20 files in other folders)
