[metadata]
# replace with your username:
name = csst_dfs_api_local
author =CSST DFS Team.
author_email = weishoulin@astrolab.cn
description = CSST DFS Local APIs Library.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, astrophysics, cosmology, space, CSST
url = https://github.com/astronomical-data-processing/csst-dfs-api-local
project_urls =
    Bug Tracker = https://github.com/astronomical-data-processing/csst-dfs-api-local/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
zip_safe = False
setup_requires = setuptools_scm
install_requires = 
    astropy>=4.0
    DBUtils==1.3
[options.package_data]
csst_dfs_api_local.common = *.sql
[options.entry_points]
console_scripts =
    csst-msc-ingest-local = csst_dfs_api_local.msc.ingest:ingest
    csst-ifs-ingest-local = csst_dfs_api_local.ifs.ingest:ingest
    csst-mci-ingest-local = csst_dfs_api_local.mci.ingest:ingest